# the-bleb-game

./: Gleb.h  Makefile
src/: CMakeLists.txt  main.cc  resources.qrc  test_DialogTree.cc
src/assets/: style.qss
src/model/: Choice.cc  Choice.h  DialogTree.cc  DialogTree.h
src/view/: DialogOptions.cc  DialogOptions.h
